--- a/index.html
+++ b/index.html
@@ -149,6 +149,17 @@
                 </div>
             </div>
         </section>
+        <section class="container-fluid third-section">
+            <div class="row no-gutters">
+                <i class="fas fa-star third-section__i"></i>
+                <h2 class="third-section__h2">Proin lobortis eu diam et facilisis. Fusce nisi nibh, molestie in
+                    vestibulum
+                    quis, auctor et orci.</h2>
+                <h6 class="third-section__h6">Curabitur at pulvinar ante. Duis dui urna, faucibus eget felis eu,
+                    iaculis
+                    congue sem.</h6>
+            </div>
+        </section>
 
 
 
