width fix in 3section

--- a/index.html
+++ b/index.html
@@ -148,9 +148,7 @@
                     <img src="images/education-img.jpg" alt="">
                 </div>
             </div>
-        </section>
-        <section class="container-fluid third-section">
-            <div class="row no-gutters">
+            <section class="third-section">
                 <i class="fas fa-star third-section__i"></i>
                 <h2 class="third-section__h2">Proin lobortis eu diam et facilisis. Fusce nisi nibh, molestie in
                     vestibulum
@@ -158,8 +156,9 @@
                 <h6 class="third-section__h6">Curabitur at pulvinar ante. Duis dui urna, faucibus eget felis eu,
                     iaculis
                     congue sem.</h6>
-            </div>
+            </section>
         </section>
+
 
 
 
